Dates given without a time zone portion are assumed to be in local time

* date/time values have resolution to the microsecond
previously was to the millisecond

* new functions
getpwuid2()
getpwnam()
getpwnam2()
getgrgid()
getgrgid2()
getgrnam()
getgrname2()
readlink()
is_date_relative(date) returns bool
is_date_absolute(date) returns bool

* cast<> operator

* delete statement is now the delete operator

* new remove operator

* new extract operator

* constants may be assigned with any expression that does not have side effects
this includes builtin functions that have been tagged as safe to use in constant expressions

* new warning: non-existent-method-call

* new warning: invalid-operation

* new warning: call-with-type-errors

* new warning: return-value-ignored

* new warning: deprecated

* new warning: excess-args

* new warning: duplicate-hash-key

* default warning mask updated
the default warning mask includes: unknown-warning, unreachable-code, nonexistent-method-call, invalid-operation, call-with-type-errors, return-value-ignored, duplicate-hash-key

* new parse option PO_REQUIRE_TYPES

* new parse option PO_NO_THREAD_INFO, domain QDOM_THREAD_INFO
the following functions were tagged with QDOM_THREAD_INFO:
gettid(), num_threads(), thread_list(), get_thread_data(), get_all_thread_data(), getAllThreadCallStacks()

* new parse option PO_NO_EXTERNAL_INFO, domain QDOM_EXTERNAL_INFO
the following functions were tagged with QDOM_EXTERNAL_INFO:
getuid(), geteuid(), getgid(), getegid(), getpid(), getppid(), gethostname(),
gethostbyname(), gethostbyaddr(), gethostbyname_long(), gethostbyaddr_long(),
getcwd(), getcwd2(), getpwuid(), getpwuid2(), getpwnam(), getpwnam2()

* new parse option PO_NO_LOCALE_CONTROL, domain QDOM_LOCALE_CONTROL
the following functions were tagged with QDOM_LOCALE_CONTROL:
TimeZone::set()

* new methods:
Datasource::constructor(hash)
DatasourcePool::constructor(hash)


***********************
*** LANGUAGE ISSUES ***